--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             </div>
             <div class="accordion" :class="{open: footer.style == 2}"  @click="footer.style = 2">
               <div class="accordion-title">
-                <p>Cutom HTML</p>
+                <p>Custom HTML</p>
               </div>
               <div class="accordion-content">
                 <div class="form-item">
