--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css\styles.css">
 
     <title>Newsleter Generator v2</title>
+    <link rel="icon" href="imgs\icons8-news-128.png">
   </head>
   <body>
     <div id="body-wrapper">
