- Added limit to loading posts

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 <input type="text" id="loadPosts" required ref="loadPosts">
                 <label for="loadPosts">Post Page's URL</label>
               </div>
+              <input type="number" id="loadPostsCount" required ref="loadPostsCount" value="6">
               <input type="button" value="Load Posts" @click="loadPostsFromURL">
             </div>
             <p>Load Individual Posts</p>
