Added more support for analytics

--- a/index.html
+++ b/index.html
@@ -358,14 +358,14 @@
             </div>
             <div class="form-item">
               <input type="text" id="analytics-name" v-model="analytics.name" required>
-              <label for="analytics-name">Analytics Name</label>
+              <label for="analytics-name">Newsletter Tracking Name</label>
             </div>
           </div>
           <div class="card">
             <h3 class="card-title">How To Setup Analytics?</h3>
             <ol>
               <li>If you don't have access to your Google Analytics, please send our team at SiteForward an email requesting access<br><small>Please include your Google Email in your request</small></li>
-              <li>Open your Google Analytics account and get your Google Analytics ID<br><small><a href="https://support.google.com/analytics/answer/1008080?hl=en">Need Help?</a></small></li>
+              <li>Open your Google Analytics account and get your Google Analytics ID<br><small>Similar to: (UA-XXXXXX-1) - <a href="https://support.google.com/analytics/answer/1008080?hl=en" target="_blank">Need Help?</a></small></li>
               <li>Enter your Newsletter's name</li>
             </ol>
           </div>  <div class="card">
