--- a/index.html
+++ b/index.html
@@ -320,24 +320,24 @@
                       <img v-if="post.img" :src="post.img">
                     <div class="data">
                       <div class="form-item">
-                        <input type="text" v-model="post.title">
-                        <label>Title</label>
+                        <input :id="'post-title-'+pos" type="text" v-model="post.title" required>
+                        <label :for="'post-title-'+pos">Title</label>
                       </div>
                       <div class="form-item">
-                        <textarea v-model="post.desc"></textarea>
-                        <label>Description</label>
+                        <textarea :id="'post-desc-'+pos" v-model="post.desc"required></textarea>
+                        <label :for="'post-desc-'+pos">Description</label>
                       </div>
                       <div class="form-item">
-                        <input type="text" v-model="post.date" style="font-size: 11px">
-                        <label>Date</label>
+                        <input :id="'post-date-'+pos" type="text" v-model="post.date" style="font-size: 11px" required>
+                        <label :for="'post-date-'+pos">Date</label>
                       </div>
                       <div class="form-item">
-                        <input type="text" v-model="post.link" style="font-size: 11px">
-                        <label>Link</label>
+                        <input :id="'post-link-'+pos" type="text" v-model="post.link" style="font-size: 11px" required>
+                        <label :for="'post-link-'+pos">Link</label>
                       </div>
                       <div class="form-item">
-                        <input type="text" v-model="post.img" style="font-size: 11px">
-                        <label>Image URL</label>
+                        <input :id="'post-image-'+pos" type="text" v-model="post.img" style="font-size: 11px" required>
+                        <label :for="'post-image-'+pos">Image URL</label>
                       </div>
                     </div>
                   </div>
@@ -380,24 +380,25 @@
         <div id="load" class="main-view" :class="{open: activeView === 'load'}">
           <div class="card">
             <h3 class="card-title">Option Management</h3>
+            <span class="card-title-icon" title="Hover over each button for more help"><i class="fas fa-question-circle tool-icon"></i></span>
             <div class="form-item split even">
-              <input type="button" value="Load Options Locally" @click="loadOptions">
-              <input type="button" value="Import Options" @click="importOptions">
+              <input type="button" value="Load Options Locally" @click="loadOptions" title="Load Options that have been saved into your browser">
+              <input type="button" value="Import Options" @click="importOptions" title="Load Options that have been saved into a .json file">
             </div>
             <div class="form-item split even">
-              <input type="button" value="Save Options Locally" @click="saveOptions">
-              <input type="button" value="Export Options" @click="exportOptions">
+              <input type="button" value="Save Options Locally" @click="saveOptions" title="Save Options into your browser">
+              <input type="button" value="Export Options" @click="exportOptions" title="Save Options into a .json file">
             </div>
           </div>
           <div class="card">
             <h3 class="card-title">Post Management</h3>
             <div class="form-item split even">
-              <input type="button" value="Load Posts Locally" @click="loadPosts">
-              <input type="button" value="Import Posts" @click="importPosts">
+              <input type="button" value="Load Posts Locally" @click="loadPosts" title="Load Posts that have been saved into your browser">
+              <input type="button" value="Import Posts" @click="importPosts" title="Load Posts that have been saved into a .json file">
             </div>
             <div class="form-item split even">
-              <input type="button" value="Save Posts Locally" @click="savePosts">
-              <input type="button" value="Export Posts" @click="exportPosts">
+              <input type="button" value="Save Posts Locally" @click="savePosts" title="Save Posts into your browser">
+              <input type="button" value="Export Posts" @click="exportPosts" title="Save Posts into a .json file">
             </div>
           </div>
         </div>
