--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
           </div>  <div class="card">
               <h3 class="card-title">How To View Analytics?</h3>
               <ol>
-                <li>Open your Google Anlytics Dashboard</li>
+                <li>Open your Google Analytics Dashboard</li>
                 <li>Open your Events tab<br><small>Located under the Realtime tab</small></li>
               </ol>
             </div>
