--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="css\styles.css">
 
-    <title>Newsleter Generator v2</title>
+    <title>Newsletter Generator v2</title>
     <link rel="icon" href="imgs\icons8-news-128.png">
   </head>
   <body>
