Correction to event analytics location

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
               <h3 class="card-title">How To View Analytics?</h3>
               <ol>
                 <li>Open your Google Analytics Dashboard</li>
-                <li>Open your Events tab<br><small>Located under the Realtime tab</small></li>
+                <li>Open your Events tab<br><small>Located under the Behaviour tab</small></li>
               </ol>
             </div>
         </div>
